# GCP_-agent-starter-pack

./: Agentspace-secret.txt  BQ_copy-append.sh  Deploy.sh  Path.ps1  create_auth.py  deploy.ps1
GCP_Agent_Starter_Pack/: README.md  build_package.py  deploy-1.py  deploy.py  pyproject.toml  requirements.txt
GCP_Agent_Starter_Pack/base_agent_config.py/: bigquery_data_analyzer_agent.yaml  deploy.py
GCP_Agent_Starter_Pack/base_agent_config.py/agents/: __init__.py  bigquery_data_analyzer_agent.py
GCP_Agent_Starter_Pack/bq_agent_app/: BQ_copy.sh  agent.py  deploy-1.py  gt_wf_dataset_metadata.json  registerAS.py  requirements.txt
GCP_Agent_Starter_Pack/bq_agent_app/metadata/: deploy-old
GCP_Agent_Starter_Pack/winsights_agent/: __init__.py  agent.py  agentv1.py  authorize_bigquery.py  create_auth.py  delete.py  deploy.py  metadata_utils.py  registerAS.py  requirements.txt  test.py
GCP_Agent_Starter_Pack/winsights_agent/metadata/: ms_graph_dataset_metadata.json
agent_starter_pack/: Deploy.py
bq_agent_app/: deploy.py
bq_agent_app/bq_agent_app/: .agent.py.swp  BQ_copy.sh  agent.py  deploy.py  metadata_utils.py  registerAS.py  registerAS.py.txt  requirements.txt
data_analyst_agent_app/: agent.py  deploy.py  metadata_utils.py  registerAS.py  requirements.txt
scripts/: copy_bigquery_dataset.py
sharepoint_agent_app/: deploy.py
sharepoint_agent_app/Agent/: __init__.py  agent.py  deploy.py
sharepoint_agent_app/sharepoint_agent_app/: agent.py  registerAS.py  requirements.txt
tests/fixtures/makefile_snapshots/: adk_base_agent_engine_no_data.makefile
(+2 files in other folders)
